--- a/aoc-common/Cargo.toml
+++ b/aoc-common/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 itertools = "0.14.0"
 textwrap = "0.16.2"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+tracing = "0.1.43"
 
 [dev-dependencies]
 rstest = "0.26.1"
