--- a/day09/Cargo.toml
+++ b/day09/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 [dependencies]
 aoc-common = { path = "../aoc-common" }
 itertools = "0.14.0"
+test-log = { version = "0.2.19", features = ["trace"] }
 tracing = "0.1.43"
 
 [dev-dependencies]
